# corpus

./: README.md  pyproject.toml
scripts/: main.py
src/corpus/: __init__.py  es_view.py
tests/: test_es_view.py
