[project]
name = "corpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zsoltholman", email = "holman.zsolt@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "elasticsearch>=9.2.0",
    "es-client>=9.0.1",
    "fastapi>=0.121.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pytest>=9.0.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
corpus = "corpus:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
